fix: 型安全な変換に変更